# louisville-kiosk

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  index.html  manifest.json  nginx.conf  pyproject.toml
.claude/skills/: fix-map-generation.skill
.claude/skills/add-business-slide/: SKILL.md
.claude/skills/fix-map-generation/: SKILL.md
css/: styles.css
data/: businesses.yaml  events.yaml  town-facts.yaml  town-images.yaml
docker/: crontab  start.sh
images/: README.md
images/maps/: README.md
js/: slideshow.js
scripts/: add_event_qrcodes.py  convert_backgrounds_grayscale.py  generate_maps.py  generate_qrcodes.py  run-scrapers.sh  scrape_events.py
scripts/scrapers/: README.md  __init__.py  scrape_chamber_calendar.py  scrape_community_calendar.py  scrape_eventbrite.py
